care/force-app/main/default/objects/Case_Type_Setting__mdt/Case_Type_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Allows admins to define how Case Types will be converted when Cases are converted from one platform to another.</description>
    <label>Case Type Setting</label>
    <pluralLabel>Case Type Settings</pluralLabel>
</CustomObject>