care/force-app/main/default/objects/Case_Type_Setting__mdt/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>