care/force-app/main/default/objects/Case_Type_Setting__mdt/fields/Source_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Case_Type__c</fullName>
    <label>Source Case Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>