care/force-app/main/default/objects/Case_Type_Setting__mdt/fields/Target_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Case_Type__c</fullName>
    <label>Target Case Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>