care/force-app/main/default/objects/Case_Type_Setting__mdt/fields/Target_Platform__c.field-meta.xml
<CustomField>
    <fullName>Target_Platform__c</fullName>
    <label>Target Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>