care/force-app/main/default/objects/Case_Type_Setting__mdt/listViews/All_International_Case_Types.listView-meta.xml
<ListView>
    <fullName>All_International_Case_Types</fullName>
    <columns>MasterLabel</columns>
    <columns>Source_Case_Type__c</columns>
    <columns>Target_Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Platform__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <label>All International Case Types</label>
    <language>en_US</language>
</ListView>